--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="col-lg-6 col-12">
                             <h2 class="mb-4">Scholarships for international students</h2>
 
-                            <p>I scraped <a href="https://static1.squarespace.com/static/5d1ad956be52e800010a2502/t/64c9494d6759433a8746fda9/1690913102131/Financial+Aid+for+International+Noncitizens+Class+of+2026.pdf">PDFs</a> and <a href="http://127.0.0.1:3000/index.html#services-section">CollegeVine</a> to track all the scholarships provided to international students in U.S colleges from 2023. I will continue to update as I get new information! In the meantime check out the table below:</p>
+                            <p>I scraped <a href="https://static1.squarespace.com/static/5d1ad956be52e800010a2502/t/64c9494d6759433a8746fda9/1690913102131/Financial+Aid+for+International+Noncitizens+Class+of+2026.pdf">PDFs</a> and <a href="http://127.0.0.1:3000/index.html#services-section">CollegeVine</a> to track all the scholarships provided to international students in U.S colleges from 2023. I will update the database as information rolls in! In the meantime check out the table below:</p>
                         </div>
 
 
