--- a/index.html
+++ b/index.html
@@ -97,7 +97,21 @@
                 </div>
             </section>
 
+            <section class="intro-section" id="services-section">
+                <div class="container">
+                    <div class="row justify-content-lg-center align-items-center">
+            
+                        <div class="col-lg-6 col-12">
+                            <h2 class="mb-4">U.S Map that shows all universities providing financial aid to international students</h2>
+                            <p>The map helps international students and those curious on where institutions are located, to find the universities that provide financial aid or merit scholarships to students on visas.</p>
+                            <iframe src="map.html" width="100%" height="600" style="border:none;"></iframe>
 
+
+
+
+
+
+            
         </main>
 
 
