--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="col-lg-12 col-12 d-flex flex-wrap">
                         <p class="d-flex me-4 mb-0">
                             <i class="bi-house-fill me-2"></i>
-                            Scholarship and Financial Aid tracker
+                            <a href="https://ananyabchetia.github.io/">My portfolio page</a>
                         </p>
                     </div>
         
