--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
 
                         <a class="custom-btn custom-border-btn custom-btn-bg-white btn button button--pan smoothscroll"
                             href="#services-section">
-                            <<<<<<< HEAD <span>Scholarship tracker</span>
-                                =======
-                                <span>Financial aid map </span>
-                                >>>>>>> 22f047453e9aa1408650f1724ad78bb9a3370d1e
+                            <span>Scholarship tracker</span>
                         </a>
                     </div>
 
